made async. map loader